# oge.gl

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  fly.toml  pyproject.toml
.cursor/rules/: backend.mdc  core.mdc  docs.mdc  frontend.mdc  shell-docker.mdc
.github/: copilot-instructions.md
.github/prompts/: code-review.prompt.md  documentation-sync.prompt.md  fix-review-findings.prompt.md  implement-ticket.prompt.md  scaffold-ticket.prompt.md
alembic/: env.py
alembic/versions/: 20260709_0001_initial_schema.py  (+1 more)
api/: pyproject.toml
api/alembic/: README
api/alembic/versions/: 20260709_0001_initial_schema.py
api/app/: __init__.py
api/app/api/: router.py
api/app/api/routes/: filings.py  ingestion.py  transactions.py
api/app/core/: config.py
api/app/db/: models.py  session.py
api/app/repositories/: filings.py  ingestion_jobs.py  transactions.py
api/app/schemas/: __init__.py  health.py  transactions.py
api/app/services/: __init__.py  filings.py  ingestion_jobs.py  transactions.py
api/app/workers/: discovery.py
api/tests/: test_filing_and_ingestion_routes.py
app/: __init__.py  main.py
config/: default.toml
docs/: admin-guide.md  cloud-install.md  development-requirements.md  product-specification.md  software-design.md  user-guide.md
fixtures/: README.md
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
scraper/: pyproject.toml
scraper/app/: __init__.py
scraper/app/discovery/: client.py
scraper/app/infrastructure/: pdf_downloads.py
scraper/app/parsing/: __init__.py  transactions.py
scraper/app/services/: __init__.py  ingestion.py
scraper/tests/: test_discovery_client.py  test_ingestion_workflow.py  test_transactions.py
web/: README.md
(+53 files in other folders)
