[project]
name = "oge-gl-scraper"
version = "0.1.0"
description = "Scraper worker for oge.gl"
requires-python = ">=3.12"
dependencies = [
  "httpx>=0.27,<1.0",
  "pdfplumber>=0.11,<1.0",
  "rapidfuzz>=3.9,<4.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
